# trade-nexus

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/agents/: __init__.py  anomaly.py  graph.py  optimizer.py  predictor.py  strategist.py
backend/src/api/: deps.py  lona_routes.py  routes.py
backend/src/cli/: lona_commands.py  main.py  portfolio_commands.py  strategy_commands.py
backend/src/models/: __init__.py  lstm.py  sentiment.py  volatility.py
backend/src/platform_api/: __init__.py  auth_identity.py  errors.py  observability.py  router_v1.py  router_v2.py  schemas_v1.py  schemas_v2.py  state_store.py
backend/src/schemas/: __init__.py  lona.py  predictions.py
backend/src/services/: __init__.py  data_service.py  lona_client.py  news_service.py  training.py
backend/tests/: test_api.py  test_security_headers.py
backend/tests/contracts/: test_adapter_json_decode_envelopes.py  test_auth_identity_runtime.py  test_cli_auth_verification_uri_contract.py  test_conversation_context_memory.py  test_conversation_proactive_notifications.py  test_data_knowledge_adapter_cache_policy.py  test_dataset_ref_backtest_flow.py  test_error_envelope_runtime.py  test_execution_adapter_boundary.py  test_execution_command_idempotency.py  test_execution_command_layer.py  test_execution_lifecycle_mapping.py  test_execution_service_reconciliation_policy.py  test_idempotency_contract_runtime.py  test_kb_ingestion_pipeline.py  test_kb_schema_contract.py  test_live_engine_execution_adapter.py  test_lona_adapter_boundary.py  test_ml_signal_validation_service.py  test_observability_structured_fields.py  test_openapi_contract_baseline.py  test_openapi_contract_freeze.py  test_openapi_contract_v2_baseline.py  test_openapi_contract_v2_validation_freeze.py  test_openapi_validation_review_contract_freeze.py  test_openclaw_client_integration.py  test_openclaw_client_lane_contract.py  test_openclaw_e2e_flow.py  test_orchestrator_execution_traces.py  test_orchestrator_retry_policy.py  (+33 more)
(+433 files in other folders)
