[project]
name = "trade-nexus-backend"
version = "0.1.0"
description = "ML backend for Trade Nexus autonomous trading orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "torch",
    "scikit-learn",
    "pandas",
    "numpy",
    "langgraph",
    "langchain",
    "langchain-core>=1.2.5",
    "langchain-xai",
    "langsmith",
    "supabase",
    "typer[all]",
    "rich",
    "aiohttp>=3.13.3",
    "urllib3>=2.6.3",
    "filelock>=3.20.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "ipykernel",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
nexus = "src.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
